--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,5 @@ project(HW_8)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(HW_8 main.cpp)
+add_executable(HW_8 main.cpp Classes/Unit.cpp Classes/Unit.h Classes/Man.cpp Classes/Man.h Classes/Animal.cpp Classes/Animal.h Classes/Pig.cpp Classes/Pig.h Classes/Bear.cpp Classes/Bear.h Classes/ManBearPig.cpp Classes/ManBearPig.h)
+#add_executable(HW_8 main.cpp)
